[react-instagram] use react-dispersive

--- a/examples/react-instagram/src/index.css
+++ b/examples/react-instagram/src/index.css
@@ -1,5 +1,38 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.post {
+  width: 40rem;
+  border: .1rem solid #ccc;
+  border-radius: .2rem;
+  margin: 1rem auto 3rem;
+  line-height: 0;
+}
+
+.post__info_bar {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+}
+
+.post__info_bar__avatar {
+  padding: .5rem;
+  width: 4rem;
+  border-radius: 50%;
+}
+
+.post__info_bar__text {
+  margin-left: 1rem;
+  line-height: .3rem;
+}
+
+.post__info_bar__text__pseudo {
+  font-weight: bold;
+}
+
+.post__info_bar__text__location {
+  color: #999;
+  font-size: .8em;
+}
+
+.post__img {
+  width: 40rem;
+  height: 40rem;
 }
