--- a/docs/src/App.css
+++ b/docs/src/App.css
@@ -1,32 +1,32 @@
 .App {
-  text-align: center;
   font-family: 'Source Sans Pro';
-}
-
-.App-logo {
-  position: absolute;
-  width: 100%;
-  height: 100%;
 }
 
 .App-header {
   position: relative;
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: #333;
+  justify-content: center;
   height: 30vh;
-  color: white;
-  overflow: hidden;
+  max-height: 20vw;
+  background-color: #333;
+}
+
+.App-logo {
+  position: absolute;
+  width: 100%;
+  min-height: 100%;
+  top: -15vw;
 }
 
 .App-title {
-  margin-top: 8vh;
+  margin-top: 4vw;
   z-index: 2;
   line-height: 0;
+  text-align: center;
 }
 
-.App-header h1 {
+.App-title h1 {
   font-family: 'Bungee Outline', cursive;
   font-size: 10vh;
   color: #f1f1f1;
@@ -35,13 +35,4 @@
 
 .App-subtitle {
   color: #ccc;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
